# reactMuslicLibrarySharer

./: README  README.md  TODO  build.sh  paths.env  runBoth.sh  syncMusic.sh
library_converter/: .gitignore  Cargo.toml  relPlaylists.sh
library_converter/src/: library_converter.rs  main.rs  playlist_converter.rs  utils.rs
musicSharerClient/: app.json  eas.json  package-lock.json  package.json
musicSharerClient/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
musicSharerClient/components/: downloadMissingFiles.tsx  networkingHandler.tsx  settings.tsx  themed-textInput.tsx  utils.tsx
musicSharerServer/src/: App.tsx  utils.ts
server/: library_converter
server/src/: index.css  index.ts  syncMusic.tsx  utils.ts
