[package]
name = "library_converter"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
serde = "1.0.228"
serde_json = "1.0.149"
sqlite = "0.37.0"
tokio = { version = "1.50.0", features= ["macros", "rt-multi-thread" ] }
url = {version="2.5.8", features=["std"] }

